--- a/Career-Page-react/src/styles/App.css
+++ b/Career-Page-react/src/styles/App.css
@@ -1,7 +1,7 @@
 /* styles.css */
 .container {
   height: 100vh;
-  width: 100vw;
+  min-width: 100vw;
   background-color: #f3f4f6; /* Light gray background */
 }
 
